<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_favorite_black_18dp"
        android:title="WishList" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="Cart" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications"
  />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle_black_48dp"
        android:title="@string/account" />


</menu>
