<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_profile"
        android:title="My Profile" />

    <item
        android:id="@+id/nav_product_categories"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="Products"/>

    <item
        android:id="@+id/nav_services_categories"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="Services"/>

    <item
        android:id="@+id/nav_order_history"
        android:icon="@drawable/ic_history"
        android:title="Order History" />
    <item
        android:id="@+id/nav_wallet"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="Wallet" />
    <item
        android:id="@+id/nav_wishlist"
        android:icon="@drawable/ic_favorite_black_18dp"
        android:title="Wishlist" />
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Notification" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info_fill"
        android:title="@string/about_us" />
    <item
        android:id="@+id/nav_faq"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/faq" />

    <item
        android:id="@+id/nav_share"
        android:iconTint="#231F20"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="Share"/>
    <item
        android:id="@+id/nav_rate"
        android:iconTint="#231F20"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="Rate the app"/>
    <item
        android:id="@+id/nav_contact"
        android:iconTint="#231F20"
        android:icon="@drawable/ic_feedback"
        android:title="Contact"/>
    <item
        android:id="@+id/report_problem"
        android:icon="@drawable/ic_reportbug"
        android:title="Report Bug/Issue" />
    <item
        android:id="@+id/nav_return_privacy"
        android:icon="@drawable/ic_check_circle_white_24dp"
        android:title="Return Policy"/>

    <item
        android:id="@+id/nav_privacy"
        android:icon="@drawable/ic_security_black_24dp"
        android:title="@string/privacy_policy"/>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="Logout" />

</menu>