<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mindfulai.Activites.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="Welcome,"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/sign_in_to_continue"
                    android:textColor="@color/heading_text_color_grey"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display"
                        android:hint="@string/enter_email_here"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        tools:ignore="Autofill" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display"
                        android:hint="@string/enter_password_here"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/resend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="Resend OTP"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:visibility="gone" />


                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:gravity="center"
                    android:text="Login"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</RelativeLayout>